src/index.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
* {
  margin: 0;
}
html,
body {
  height: 100%;
}
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
img,
picture,
video,
svg {
  display: block;
  max-width: 100%;
}
input,
button,
textarea,
select {
  font: inherit;
}
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
#root,
#__next {
  isolation: isolate;
}

body {
  background: #252525;
  color: white;
  /* font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; */
  font: 300 16px/22px "Mona Sans", "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial,
    sans-serif;
}

/**
===================================================
                 Main app CSS

===================================================
**/

html,
body,
#root {
  margin: 0;
  padding: 0;
  height: 100%;
}

.appContainer {
  position: absolute;
  height: 90vh;
  width: 95vw;
  margin: 0 auto;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: 1px solid var(--text-color);
  padding: 10px;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

main {
  display: flex;
  z-index: 1;
  text-align: left;
  padding: 20px;
  padding-bottom: 30px;
  flex-direction: column;
  flex-grow: 1; /* Make main take up all available space */
  overflow: hidden;

  @media (max-width: 768px) {
    padding: 10px;
    padding-bottom: 10px;
  }
}

.header {
  position: relative;
  z-index: 1;
  text-align: left;
  padding: 20px;
  min-height: 18vh;
  padding-bottom: 30px;
  flex-shrink: 0; /* Prevent the header from shrinking */

  @media (max-width: 768px) {
    padding: 10px;
    padding-bottom: 10px;
  }
}

.header h1 {
  font-size: 3vw;
  margin-bottom: 10px;
}

.header p {
  font-size: 20px;
}

.tabs li {
  margin: 0 10px;
}

nav {
  position: absolute;
  top: 0px;
  right: 0px;
}

nav a {
  font-size: clamp(0.8rem, 2.5vw, 2rem);
}

ul {
  list-style-type: none;
  position: relative;
  z-index: 1;
  text-align: left;
  padding: 10px;
  min-height: 18vh;
  padding-bottom: 30px;
  height: 100px;
  display: flex;
  flex-direction: row;

  @media (max-width: 768px) {
    flex-direction: column; /* Switch to vertical layout */
    padding: 20px 0;
  }

  flex-wrap: wrap;
}

#name {
  font-size: 56px;
  font-weight: 700;
  color: var(--text-color);
  cursor: pointer;

  @media (max-width: 768px) {
    font-size: 32px;
  }
}

/**
===================================================
                 LIGHT/DARK MODE

===================================================
**/

body.light {
  --background-color: #ffffff;
  --text-color: #000000;
  --link-color: #1a0dab;
}

body.dark {
  --background-color: #121212;
  --text-color: #ffffff;
  --link-color: #8ab4f8;
}

body {
  background-color: var(--background-color);
  color: var(--text-color);
}

a {
  color: var(--link-color);
}

.header {
  background-color: var(--background-color);
  color: var(--text-color);
}

.tabs a {
  color: var(--text-color);
}

.tabs li a {
  color: var(--text-color);
}

.toggleTheme {
  padding: 0;
  border: 0;
  background: none;
}

.toggleTheme:hover {
  cursor: pointer;
}

/**
===================================================
                 About Me

===================================================
**/

.leftCol h1 {
  font-weight: 600;
  font-size: 2.5vw;
  line-height: 3vw;

  @media (max-width: 768px) {
    font-size: 1rem;
    line-height: 1.2rem;
  }
}

.leftCol h4 {
  font-weight: 600;
  font-size: 30px;
  line-height: 28px;

  @media (max-width: 768px) {
    font-size: 12px;
    line-height: 12px;
  }
}

.leftCol p {
  font-weight: 300;
  font-size: 30px;
  line-height: 28px;

  @media (max-width: 768px) {
    font-size: 12px;
    line-height: 12px;
  }
}

.commentText {
  color: #6a9955;
  font-size: 12px;

  @media (max-width: 768px) {
    font-size: 8px;
    line-height: 8px;
  }
}

/**
===================================================
                 Structure

===================================================
**/

.container {
  display: grid;
  grid-template-columns: 60% 40%;
  align-items: center;
  height: 100%;
}

.leftCol {
  padding: 10px; /* Optional: Add some padding for better spacing */
  text-align: left;
  justify-self: start; /* Align text to the start (left) */
  align-self: start; /* Align text to the top */
  height: 100%;
  overflow-y: scroll;

  @media (max-width: 768px) {
    padding: 5px;
  }
}

.rightCol {
  display: flex;
  margin-left: auto;
  margin-right: auto;
  justify-content: center;
  align-items: center;
  text-align: center;

  height: 100%;
  width: 100%;
}

.rightCol img {
  width: 460px;
  height: auto;
  overflow: hidden;
}

.rightCol p {
  font-size: 20px;
  line-height: 22px;

  @media (max-width: 768px) {
    font-size: 12px;
    line-height: 14px;
  }
}

/**
===================================================
              Projects/ Project Card

===================================================
**/

.projects {
  padding: 10px;
  font-weight: 600;

  font-size: 2.5vw;
  line-height: 3vw;

  @media (max-width: 768px) {
    padding: 5px;
    font-size: 1rem;
    line-height: 1.2rem;
  }
}

.projectContainer {
  display: grid;
  grid-template-columns: repeat(auto-fit, 300px);
  grid-template-rows: repeat(auto-fit, 220px);
  gap: 4%;
  align-items: start;
  padding: 10px;
  height: 100%;
  justify-content: center;
  overflow-y: auto;
  overflow-x: hidden;
}

.projectCardContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--background-color);
  border: 2px solid var(--text-color);
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  padding: 8px;
  width: 300px;
  text-align: center;
  max-height: 220px;
}

.projectImage {
  max-width: 100%;
  height: auto;
  overflow: hidden; /* Ensures that any overflow is hidden */
  text-align: center; /* Center the image horizontally */
  margin-left: auto;
  margin-right: auto;
  max-height: 140px;
  border-radius: 8px;
  color: var(--text-color);
  background-color: var(--background-color);
}

.projectTitle {
  font-size: 1.2em;
  margin: 8px 0;
  color: var(--text-color);
}

.githubLink {
  color: #0366d6;
  text-decoration: none;
  font-weight: bold;
}

.githubLink:hover {
  text-decoration: underline;
}

.projectCardContainer i {
  border-radius: 8px;
  display: block; /* Change to block to center vertically */
  margin: auto; /* Center horizontally */

  font-size: clamp(100px, 120px, 140px);
  max-height: 140px;
  max-width: 140px;

  color: var(--background-color);
  background: var(--text-color);
}

/**
===================================================
              Home Contact

===================================================
**/

.icon-button {
  margin-bottom: 10px;
  display: flex;
  text-decoration-color: var(--text-color);
  width: fit-content;
  align-items: center;

  @media (max-width: 768px) {
    margin-bottom: 2px;
  }
}

.icon-button p {
  font-size: 32px;
  color: var(--text-color);

  @media (max-width: 768px) {
    font-size: 14px;
  }
}

.icon-button i {
  border-radius: 2.6rem;
  cursor: pointer;
  display: inline-block;
  font-size: 1.3rem;
  height: 2.6rem;
  width: 2.6rem;
  line-height: 2.6rem;
  margin: 5px 15px;
  position: relative;
  text-align: center;

  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

  color: var(--background-color);

  @media (max-width: 768px) {
    line-height: 18px;
    height: 18px;
    width: 18px;
    font-size: 8px;
    margin: 0 5px;
  }
}

.main-button {
  background-color: #55198b;
  border: solid 1px #55198b;
  color: white;
  font-weight: 500;
  line-height: 1.1;
  width: max-content;
  padding: 13px 22px;
  margin-right: 0px;
  /* text-transform: uppercase; */
  border-radius: 6px;
  text-align: center;
  text-decoration: none;
  font-family: " Mona Sans ";
  display: block;
  margin-top: 20px;
  font-size: 18px;
  cursor: pointer;
  letter-spacing: 2px;
}

.main-button:hover {
  transition: ease-in 0.3s;
}

.project-button {
  display: flex;
  justify-content: center;
  margin-top: 20px;
}
/* Media Query */
@media (max-width: 768px) {
  .main-button {
    font-size: 15px;
    padding: 12px 18px;
    margin-right: 0px;
    margin-top: 5px;
  }
}
@media (max-width: 320px) {
  .main-button {
    font-size: 12px;
  }
}

.homeContainer {
  display: flex;
  flex-direction: column;
}

.homeContainer p {
  align-self: center;
  line-height: 42px;

  @media (max-width: 768px) {
    font-size: 12px;
    line-height: 12px;
  }
}

.technologies {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  grid-auto-columns: minmax(200px, auto);
  grid-template-rows: repeat(auto-fit, minmax(52px, 1fr));
  grid-column-gap: 2%;
  grid-row-gap: 2%;

  justify-content: center;

  border: 1px solid var(--text-color);
  border-radius: 10px;
  padding: 15px;

  background-color: var(--background-color);
  height: fit-content;
  width: 100%;

  @media (max-width: 768px) {
    grid-template-columns: repeat(auto-fit, 100%);
    grid-template-rows: repeat(auto-fit, 32px);
    grid-row-gap: 1%;

    height: 200px;
    overflow-y: auto;
  }
}

.tech {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  width: 100%;
  border-radius: 10px;
  padding: 10px 10px;
  margin: auto;
  background-color: var(--text-color);
  color: var(--background-color);

  transition: 700ms ease;

  @media (max-width: 768px) {
    font-size: 12px;
    line-height: 12px;

    padding: 4px 10px;
  }
}

.technologies:has(.tech:hover) .tech:not(:hover) {
  background-color: var(--background-color);
  color: var(--text-color);
}

.logo {
  width: 30%;
  height: 100%;
}

.tech p {
  font-size: 14px;
  line-height: 16px;

  @media (max-width: 768px) {
    font-size: 12px;
    line-height: 12px;
  }
}

.resume-btn-div {
  align-self: center;
}

/**
===================================================
                  Contact

===================================================
**/

.calendly {
  font-size: 24px;
  line-height: 22px;

  @media (max-width: 768px) {
    font-size: 16px;
    line-height: 14px;
  }
}

